@@ -15,15 +15,15 @@
 $Id$
 """
 
-from AccessControl import ClassSecurityInfo
-from Globals import InitializeClass
+from AccessControl.SecurityInfo import ClassSecurityInfo
+from App.class_init import default__class_init__ as InitializeClass
 from zope.interface import implements
 
-from AbstractCriterion import AbstractCriterion
-from interfaces import ICriterion
-from permissions import ChangeTopics
-from permissions import View
-from Topic import Topic
+from Products.CMFTopic.AbstractCriterion import AbstractCriterion
+from Products.CMFTopic.interfaces import ICriterion
+from Products.CMFTopic.permissions import ChangeTopics
+from Products.CMFTopic.permissions import View
+from Products.CMFTopic.Topic import Topic
 
 
 class SimpleStringCriterion( AbstractCriterion ):
