@@ -15,10 +15,9 @@
 $Id$
 """
 
-from AccessControl import ClassSecurityInfo
+from AccessControl.SecurityInfo import ClassSecurityInfo
 from Acquisition import aq_parent, aq_inner
-from Globals import InitializeClass
-
+from App.class_init import default__class_init__ as InitializeClass
 from zope.component import getUtility
 from zope.component.factory import Factory
 from zope.interface import implements
@@ -27,11 +26,11 @@ from Products.CMFDefault.SkinnedFolder import SkinnedFolder
 from Products.CMFCore.interfaces import ISyndicationTool
 from Products.CMFCore.utils import getToolByName
 
-from interfaces import IMutableTopic
-from interfaces import ITopic
-from permissions import View
-from permissions import AddTopics
-from permissions import ChangeTopics
+from Products.CMFTopic.interfaces import IMutableTopic
+from Products.CMFTopic.interfaces import ITopic
+from Products.CMFTopic.permissions import View
+from Products.CMFTopic.permissions import AddTopics
+from Products.CMFTopic.permissions import ChangeTopics
 
 
 def addTopic(self, id, title='', REQUEST=None):
