@@ -4,6 +4,16 @@ Products.CMFTopic Changelog
 2.2.0 (unreleased)
 ------------------
 
+- Cleaned up / normalized imports:
+
+  o Don't import from Globals;  instead, use real locations.
+
+  o Make other imports use the actual source module, rather than an
+    intermediate (e.g., prefer importing 'ClassSecurityInfo' from
+    'AccessControl.SecurityInfo' rather than from 'AccessControl').
+
+  o Avoid relative imports, which will break in later versions of Python.
+
 - profiles: Added an add view expression to the Topic content type definition.
 
 - Topic GenericSetup definition: Add an icon URL expression to the Topic
